Fixing content 'jump' when affix class is applied to navbar

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -6,6 +6,7 @@ header {
 .nav-wrapper
 {
     min-height: 52px;
+    margin-bottom: 20px;
 }
 
 nav {
